# keyboard

./: .gitignore  Dockerfile.analyzer  Dockerfile.base  Dockerfile.visualizer  Dockerfile.worker  README.md  __init__.py  dictr.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  text.txt  ver_2.py  код с коментами.txt
.github/workflows/: tests.yml
data/: __init__.py  dictr.py
docs/source/: conf.py  dictr.rst  index.rst  modules.rst  ver_2.rst
models/: __init__.py  keyboard_analyzer.py  keyboard_layout.py  storage.py  worker_rabbit.py
tests/: test_integration.py  test_keyboard_analyzer.py  test_keyboard_layout.py  test_utils_stats.py  test_visual.py
utils/: __init__.py  blocks.py  large.py  parallel_large.py  parallel_large_rabbit.py  stats.py
visual/: __init__.py  charts_bar.py  charts_multi.py  charts_pie.py  charts_summary.py  visualmain.py
