[project]
name = "keyboard"
version = "1.0.3"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "3.12.3"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "rich (>=14.2.0,<15.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "redis (>=7.0.1,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
